--- a/style.css
+++ b/style.css
@@ -16,13 +16,24 @@ body {
   overflow: auto;
 }
 
-#bgVideo {
-  position: fixed; 
-  inset: 0;
-  width: 100%; 
+#bgVideoContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
-  object-fit: cover;
   z-index: -1;
+  overflow: hidden;
+}
+
+#bgVideo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
   opacity: 0.8;
 }
 
