--- a/style.css
+++ b/style.css
@@ -16,24 +16,13 @@ body {
   overflow: auto;
 }
 
-#bgVideoContainer {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  overflow: hidden;
-}
-
 #bgVideo {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  min-width: 100%;
-  min-height: 100%;
+  position: fixed; 
+  inset: 0;
+  width: 100%; 
+  height: 100%;
   object-fit: cover;
+  z-index: -1;
   opacity: 0.8;
 }
 
